# youbot_navigation

./: CMakeLists.txt  README.md  package.xml
config/: joy_logitech_params.yaml  mapping.rviz  move_base_params.yaml  obstacles_detection_params.yaml  recovery_params.yaml  twist_mux_params.yaml  wifi_amcl.rviz  youbot.rviz
config/global_planner/: carrot_planner_params.yaml  global_planner_params.yaml  navfn_params.yaml
config/local_planner/: base_local_planner_params.yaml  dwa_local_planner_params.yaml  eband_local_planner_params.yaml  teb_local_planner_params.yaml
config/online/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
config/static/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
launch/: bag_mapping.launch  bag_recording.launch  online_map_gmapping.launch  online_map_hector_mapping.launch  online_map_rtabmap.launch  static_map_amcl.launch  static_map_rtabmap.launch  youbot_init.launch
launch/remote/: rtabmapviz.launch  teleop_joystick.launch  teleop_keyboard.launch
launch/separate/: amcl.launch  freenect.launch  gmapping.launch  hector_mapping.launch  lms1xx.launch  move_base.launch  rtabmap.launch  twist_mux.launch  youbot_driver_ros_interface.launch
map/: default.pgm  default.yaml
