<?xml version="1.0"?>
<package format="2">
  <name>youbot_navigationr</name>
  <version>1.0.0</version>
  <description>The youbot_navigation package</description>
  <author>Le Thai An</author>
  <maintainer email="an.thai.le97@gmail.com">Thai An Le</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>youbot_description</exec_depend>
  <exec_depend>youbot_driver_ros_interface</exec_depend>
  <exec_depend>lms1xx</exec_depend>
  <exec_depend>freenect_camera</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
</package>
